--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "minimum-stability": "dev",
     "require": {
-        "silex/silex": "1.0.*"
+        "silex/silex": "1.0.*",
+        "doctrine/dbal": "2.2.*"
     },
     "autoload": {
         "psr-0": {
