--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "minimum-stability": "dev",
     "require": {
         "silex/silex": "1.0.*",
-        "doctrine/dbal": "2.2.*"
+        "doctrine/dbal": "2.2.*",
+        "monolog/monolog": ">=1.0.0"
     },
     "autoload": {
         "psr-0": {
